@@ -129,6 +129,7 @@ Additions:
      - Add threshold support to Edje draggable part.
      - Reduce load time of Edje_Object using Evas_Object_Textblock and many styles.
      - Add edje_object_mmap_set.
+     - Add edje_object_part_text_input_panel_show_on_demand_set/get().
     * Eeze:
      - Add a dummy libmount replacement for when libmount is not there.
     * Ecore_Con:
